--- a/layouts/contactus/list.html
+++ b/layouts/contactus/list.html
@@ -43,7 +43,7 @@
     <!-- Heading -->
     <div class="text-center">
       <h1
-        class="text-5xl font-bold tracking-wide bg-gradient-to-r from-white via-green-300 to-white text-transparent bg-clip-text drop-shadow-lg"
+        class="text-5xl font-bold tracking-wide bg-gradient-to-r from-white via-green-400 to-white text-transparent bg-clip-text drop-shadow-lg"
       >
         GET IN TOUCH
       </h1>
@@ -99,9 +99,9 @@
         <div class="md:col-span-2 text-center">
           <button
             type="submit"
-            class="px-8 py-3 bg-gradient-to-r from-white to-cyan-600 text-black font-semibold rounded-lg hover:scale-105 hover:from-cyan-200 hover:to-white transition-all duration-300 shadow-white shadow-md"
+            class="px-8 py-3 bg-gradient-to-r from-white to-green-600 text-black font-semibold rounded-lg hover:scale-105 hover:from-cyan-200 hover:to-white transition-all duration-300 shadow-white shadow-sm"
           >
-            Launch Message 🚀
+            Launch Message
           </button>
         </div>
       </form>
