--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -89,4 +89,7 @@
       </div>
     </div>
   </div>
+  <p class="text-sm text-gray-500 text-center mt-8">
+    &copy; 2025 <span class="font-semibold">Algoteq</span>. All rights reserved.
+  </p>
 </footer>
