--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,7 +9,7 @@
         src="/images/algoteq-logo.png"
         width="176"
         height="28"
-        class="w-[176px] h-[28px] max-sm:w-36"
+        class="w-auto h-[28px]"
         alt="algoteq logo"
       />
     </a>
@@ -308,7 +308,7 @@
                 >Algorithmic Platform</a
               >
               <a href="/algorithmic-suite" class="hover:text-gray-700"
-                >Algorithmic Suie</a
+                >Algorithmic Suite</a
               >
               <a href="/matching-engine" class="hover:text-gray-700"
                 >Matching Engine</a
