--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -70,7 +70,7 @@
           </span>
         </div>
 
-        <div class="secondcontent w-4/6 font-light max-sm:text-center">
+        <div class="secondcontent w-4/6 text-lg font-light max-sm:text-center">
           Algoteq builds institutional-grade technology for modern financial
           markets. Founded in 2013 by experienced investment banking
           professionals, we provide state-of-the-art trading solutions.
@@ -127,7 +127,7 @@
               Advanced<br />Trading<br />Solutions
             </h2>
           </div>
-          <div class="mt-32 max-sm:mt-6">
+          <div class="mt-32 max-sm:mt-6 text-lg">
             <span>
               Develop, test, and optimize your strategies<br
                 class="lg:hidden"
