--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -1,6 +1,6 @@
 <div class="announcement">
   <div
-    class="text-white flex items-center justify-center h-[50px] lg:text-[14px] sm:text-[10px] gap-3"
+    class="text-white flex max-sm:text-center items-center justify-center h-[50px] lg:text-[14px] sm:text-[10px] gap-3"
   >
     <h3 class="max-sm:text-xs">
       Algorithmic Platform | Trading Strategies | OMS | AI | Trading Simulators
