--- a/layouts/algorithmic-platform/list.html
+++ b/layouts/algorithmic-platform/list.html
@@ -64,7 +64,7 @@
 
   <!-- Introduction Section -->
   <div
-    class="w-full h-[700px] max-sm:h-[900px] grid grid-cols-2 max-sm:flex bg-white text-black text-left py-20 max-sm:py-10 relative"
+    class="w-full h-[900px] grid grid-cols-2 max-sm:flex bg-white text-black text-left py-20 max-sm:py-10 relative"
     x-intersect:enter="shown = true"
   >
     <div
