--- a/layouts/analytics/list.html
+++ b/layouts/analytics/list.html
@@ -194,12 +194,14 @@
           ></div>
           <div class="text-center z-10">
             <p
-              class="uppercase text-2xl max-sm:text-2xl font-bold bg-gradient-to-r from-blue-400 to-green-500 bg-clip-text text-transparent mb-2"
+              class="text-2xl max-sm:text-2xl font-bold bg-gradient-to-r from-blue-400 to-green-500 bg-clip-text text-transparent mb-2"
             >
-              Realtime Core
+              Less than 26µs
             </p>
-            <h2 class="text-3xl text-[#060218] font-normal mb-5">+124ms</h2>
-            <p class="text-sm text-zinc-700">Latency Avg</p>
+            <h2 class="text-3xl text-[#060218] font-normal mb-5">
+              99.5% of messages
+            </h2>
+            <p class="text-sm text-zinc-700">including the network hops</p>
           </div>
         </div>
       </div>
