--- a/layouts/algorithmic-platform/list.html
+++ b/layouts/algorithmic-platform/list.html
@@ -269,7 +269,7 @@
     class="bg-white w-full grid grid-cols-1 md:grid-cols-3 p-10 md:p-20 gap-8 relative"
   >
     <div
-      class="w-full h-[700px] md:col-span-2 bg-[#121010] text-white rounded-2xl overflow-hidden z-20 shadow-lg shadow-black"
+      class="w-full h-[700px] md:col-span-2 bg-[#121010] text-white rounded-2xl overflow-hidden z-20 shadow-md shadow-black"
     >
       <!-- Code Block Header -->
       <div
