--- a/layouts/careers/list.html
+++ b/layouts/careers/list.html
@@ -81,11 +81,13 @@
     </p>
 
     <div class="mt-8">
-      <a
-        href="/contactus"
-        class="inline-block px-6 py-3 bg-green-600 text-white font-semibold hover:bg-blue-700 transition"
-      >
-        Apply Now
+      <a href="/contactus">
+        <button
+          type="submit"
+          class="px-8 py-3 bg-gradient-to-r from-blue-400 to-green-400 font-semibold hover:scale-105 hover:from-green-600 hover:to-blue-600 transition-all duration-300 shadow-white shadow-sm text-white"
+        >
+          Learn More
+        </button>
       </a>
     </div>
   </div>
