--- a/layouts/contactus/list.html
+++ b/layouts/contactus/list.html
@@ -99,9 +99,9 @@
         <div class="md:col-span-2 text-center">
           <button
             type="submit"
-            class="px-8 py-3 bg-gradient-to-r from-white to-green-600 text-black font-semibold rounded-lg hover:scale-105 hover:from-cyan-200 hover:to-white transition-all duration-300 shadow-white shadow-sm"
+            class="px-8 py-3 bg-gradient-to-r from-blue-100 to-green-100 font-semibold hover:scale-105 hover:from-green-100 hover:to-blue-100 transition-all duration-300 shadow-white shadow-sm text-black"
           >
-            Launch Message
+            Learn More
           </button>
         </div>
       </form>
