--- a/layouts/order_management_system/list.html
+++ b/layouts/order_management_system/list.html
@@ -110,7 +110,7 @@
       class="relative z-10 flex h-full w-3/4 max-sm:w-11/12 justify-center px-4 max-sm:px-0"
     >
       <div
-        class="bg-white/20 backdrop-blur-md px-10 py-40 max-sm:py-10 text-black text-center border border-white/30 w-full"
+        class="bg-white/20 backdrop-blur-md max-sm::backdrop-blur-sm px-10 max-sm:px-5 py-40 max-sm:py-10 text-black text-center border border-white/30 w-full"
       >
         <div>
           <div class="text-left">
@@ -157,7 +157,8 @@
           </div>
           <div class="flex justify-start mt-20 max-sm:mt-10 ml-10 max-sm:ml-0">
             <button
-              class="w-28 h-10 bg-[#1DA903] text-white text-center justify-center items-center"
+              type="submit"
+              class="px-8 py-3 bg-gradient-to-r from-blue-400 to-green-400 font-semibold hover:scale-105 hover:from-green-600 hover:to-blue-600 transition-all duration-300 shadow-white shadow-sm text-white"
             >
               Let's talk
             </button>
