--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,8 @@
         </h2>
         <a href="/contactus">
           <button
-            class="w-28 h-10 bg-black text-white font-bold text-center justify-center items-center"
+            type="submit"
+            class="px-8 py-3 bg-gradient-to-r from-blue-400 to-green-400 font-semibold hover:scale-105 hover:from-green-600 hover:to-blue-600 transition-all duration-300 shadow-white shadow-sm text-white"
           >
             Let's talk
           </button>
@@ -22,10 +23,12 @@
         <ul
           class="flex flex-col gap-4 pl-10 max-sm:pr-10 pt-20 max-sm:pt-2 max-sm:pb-6 max-sm:grid max-sm:grid-cols-2 text-sm"
         >
-          <li><a href="/">HOME</a></li>
-          <li><a href="/careers">CAREERS</a></li>
-          <li><a href="/contactus">CONTACT US</a></li>
-          <li><a href="/blog">BLOG</a></li>
+          <li class="hover:text-gray-500"><a href="/">HOME</a></li>
+          <li class="hover:text-gray-500"><a href="/careers">CAREERS</a></li>
+          <li class="hover:text-gray-500">
+            <a href="/contactus">CONTACT US</a>
+          </li>
+          <li class="hover:text-gray-500"><a href="/blog">BLOG</a></li>
         </ul>
       </nav>
     </div>
@@ -34,19 +37,22 @@
     <div class="grid grid-cols-4 max-sm:flex max-sm:flex-wrap">
       <div class="col-span-3">
         <ul
-          class="flex max-sm:flex-col items-start gap-20 max-sm:gap-4 text-sm max-sm:text-xs font-thin ml-20 max-sm:ml-10"
+          class="flex max-sm:flex-col items-start gap-20 max-sm:gap-4 text-sm max-sm:text-xs text-gray-400 ml-20 max-sm:ml-10"
         >
           <li>
             <a
               href="https://algoteq.com/wp-content/uploads/2025/01/Products-Services.pdf"
               target="_blank"
               rel="noopener"
-              class="hover:text-green-600"
+              class="hover:text-gray-900 hover:font-semibold ease-in-out"
               >Products & Services</a
             >
           </li>
           <li>
-            <a href="/social-policy" class="hover:text-green-600">
+            <a
+              href="/social-policy"
+              class="hover:text-gray-900 hover:font-semibold"
+            >
               Corporate Social Responsibility Policy
             </a>
           </li>
@@ -55,7 +61,7 @@
               href="https://algoteq.com/wp-content/uploads/2024/03/Algoteq-Environmental-Impact-Policy.pdf"
               target="_blank"
               rel="noopener"
-              class="hover:text-green-600"
+              class="hover:text-gray-900 hover:font-semibold"
               >Environmental Impact Policy</a
             >
           </li>
@@ -70,7 +76,7 @@
             alt="X (Twitter) icon"
             width="40"
             height="40"
-            class="w-10 h-10"
+            class="w-10 max-sm:w-8 h-10"
           />
         </a>
         <a
@@ -83,7 +89,7 @@
             alt="LinkedIn icon"
             width="40"
             height="40"
-            class="w-10 h-10"
+            class="w-10 max-sm:w-8 h-10"
           />
         </a>
       </div>
