--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -12,7 +12,7 @@
       class="col-span-1"
       x-cloak
       x-show="visible"
-      x-transition:enter="transition ease-out duration-1000"
+      x-transition:enter="transition ease-in-out duration-1000"
       x-transition:enter-start="opacity-0 "
       x-transition:enter-end="opacity-100 "
     >
@@ -56,7 +56,7 @@
         class="herocontent flex flex-col justify-center items-center gap-10 max-sm:gap-10"
       >
         <div
-          class="firstcontent w-4/6 text-6xl max-sm:text-4xl max-sm:text-center"
+          class="firstcontent w-4/6 max-sm:w-11/12 text-6xl max-sm:text-4xl max-sm:text-center"
         >
           <span>
             Building Intelligent<br />
@@ -70,16 +70,19 @@
           </span>
         </div>
 
-        <div class="secondcontent w-4/6 text-lg font-light max-sm:text-center">
+        <div
+          class="secondcontent w-4/6 max-sm:w-11/12 text-lg font-light max-sm:text-center"
+        >
           Algoteq builds institutional-grade technology for modern financial
           markets. Founded in 2013 by experienced investment banking
           professionals, we provide state-of-the-art trading solutions.
           <div class="mt-10">
             <a href="/contactus">
               <button
-                class="w-28 h-10 bg-white text-black font-bold text-center justify-center items-center"
+                type="submit"
+                class="px-8 py-3 bg-gradient-to-r font-bold from-white to-white hover:scale-105 hover:from-green-100 hover:to-blue-100 transition-all duration-300 shadow-white shadow-sm text-gray-950"
               >
-                Get Started
+                Learn More
               </button>
             </a>
           </div>
@@ -96,7 +99,7 @@
       width="1600"
       height="900"
       loading="lazy"
-      class="absolute inset-0 w-[1600px] h-[900px] object-cover z-10"
+      class="absolute inset-0 w-full h-full object-cover z-10"
     />
 
     <!-- Gradient overlay -->
@@ -183,7 +186,7 @@
           <a href="/contactus">
             <button
               type="submit"
-              class="px-8 py-3 bg-gradient-to-r from-blue-100 to-green-500 text-black font-semibold hover:scale-105 hover:from-green-500 hover:to-blue-200 transition-all duration-2000 shadow-white shadow-md"
+              class="px-8 py-3 bg-gradient-to-r from-blue-400 to-green-400 font-semibold hover:scale-105 hover:from-green-600 hover:to-blue-600 transition-all duration-300 shadow-white shadow-sm text-white"
             >
               Learn More
             </button>
